Arreglos de ultima hora

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 						<ul>
 							<li><a href="index.html">Inicio</a></li>
 							<li>
-								<a href="#">Mas</a>
+								<a href="#">Proximamente</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="left-sidebar.html">Esperanos</a></li>
+									<li><a href="right-sidebar.html">Esperanos</a></li>
+									<li><a href="no-sidebar.html">Esperanos</a></li>
 									<li>
-										<a href="#">Submenu</a>
+										<a href="#">Esperanos</a>
 										<ul>
 											<li><a href="#">Option 1</a></li>
 											<li><a href="#">Option 2</a></li>
@@ -37,7 +37,7 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elementos</a></li>
+							<li><a href="elements.html">Proximamente</a></li>
 							<li><a href="#" class="button special">Unete!</a></li>
 						</ul>
 					</nav>
@@ -48,9 +48,12 @@
 					<div class="content">
 						<header>
 							<h2>Corporación Creativa e Innovadora</h2>
-							<p>Bienvenidos a la Tecnologia!<br>
+							<p>El Mundo Necesita de Nosotros!<br>
 							</p>
-							<p>El Mundo Necesita de Nosotros...</p>
+							<p>¿Para que aprender a programar? ¿Que ganare si lo hago? <br>
+							 </p>
+							 <p>Te daremos las respuestas solo ve hacia abajo! !Exitos! </p>
+							 <p><b>!El Futuro es hoy!</b></p>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
@@ -65,23 +68,15 @@
 							<div class="row">
 								<div class="4u 12u$(medium)">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>Programación Informatica</h2>
+										<p> Programación es basicamente decirle a una computadora que quieres que haga por ti por medio de Algoritmos.</p>
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p><b>Algoritmos: </b>Un algoritmo es una serie de pasos organizados que describe el proceso que se debe seguir, para dar solución a un problema específico. <a href="http://www.virtual.unal.edu.co/cursos/ingenieria/2001839/modulo1/cap_02/leccion103.htm">Mas...</a></p>
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p><b>Lenguaje de programación: </b>es un lenguaje diseñado para describir el conjunto de acciones consecutivas que un equipo debe ejecutar. Por lo tanto, un lenguaje de programación es un modo práctico para que los seres humanos puedan dar instrucciones a un equipo. - ¿Vas entendiendo?</p>
 								</div>
 							</div>
 						</div>
@@ -94,12 +89,12 @@
 					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<h2>Smartphones</h2>
+							<p>"Todo puede cambiar, por que la revolucion smartphone esta todavia en proceso"</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>Lo dijo un gran visionario de la tecnologia <a href="https://es.wikipedia.org/wiki/Steve_Jobs">Steve Jobs, </a>si vemos a nuestro alrededor todo el mundo tiene un smarhphone y hasta tú tienes uno la tecnologia avanza, te mostrare un ejemplo: en Perú la cantidad de personas que tienen un smartphone es del 56% esta entre niños, jovenes , adultos gracias a la usabilidad ¿No crees que deverias estar pensando que hacer cuando estas cifras aumenten?</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="#" class="button">Saber Mas</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -110,12 +105,14 @@
 					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<h2>Ingresos</h2>
+							<p>"Estamos en la era de la tecnologia"</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>En Silicon Valley " La cuidad tecnologica ", en solo este año tienen mas de 5000 plazas para personas que sepan programar, y esto ira creciendo dia tras dia <br>
+						<b>Marketin</b> El marketin que quieren las empresas hoy en dia es por medio de aplicaciones cada 3 de 5 personas usan aplicaciones las mismas aplicaciones de  20 a 50 veces por dia! ¿Te imaginas?  <br>
+						<b>Diseño Web:  </b>Alguna vez escuchaste esa frase "Si tu negocio no esta en internet, simplemente no existe" y el diseño web es el gran paso de cualquier empresa que quiera globalizarse y si sabes programar creeme que tu seras la llave a ese gran mundo!</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="#" class="button">Saber mas</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
@@ -125,40 +122,40 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Accumsan sed tempus adipiscing blandit</h2>
-							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+							<h2>Todo lo que aprenderan en nuestra academia</h2>
+							<p>nuestro objetivo, es que tu seas un gran programador.</p>
 						</header>
 						<div class="box alt">
 							<div class="row uniform">
 								<section class="4u 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-area-chart"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Eleva tus Conocimientos</h3>
+									<p>Busca soluciones en tus programas has que sea mas facil y divertido.</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Haz tus Ideas Realidad</h3>
+									<p>Tenemos que hacer que esto sea grande asi que lo inportante aqui es tener ¡ideas! lograr tus objetivos y hacerlo grande.</p>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Experimenta</h3>
+									<p>Logra, crea, realiza tus planes tal como lo propones sobre todo experimenta tus ideas de programador y ¡logra! e innova.</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Conparte lo Aprendido</h3>
+									<p>Has que sea innovadora y creativa asi que comperte todo con tus amigos y informalos .</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Documentos</h3>
+									<p>Sus documentos siempre ala mano.</p>
 								</section>
 								<section class="4u$ 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-lock"></span>
-									<h3>Massa arcu accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Seguridad</h3>
+									<p>Aprenderas sobre seguridad en todos los medios.</p>
 								</section>
 							</div>
 						</div>
